--- a/src/Layout/Sidebar.css
+++ b/src/Layout/Sidebar.css
@@ -1,31 +1,30 @@
 .sidebar{
-  position: relative;
+  position: absolute;
   background-color: #333;
-  width: 50px;
   height: 917px;
   display: flex;
 }
-.sidebar .side-menu{
+.sidebar .main_side{
   width: 50px;
 }
 
-.sidebar .side-menu .icon .material-icons{
+.sidebar .main_side .material-icons{
   font-size: 25px;
   margin: 0 2px;
   color: #848484;
 }
 
-.sidebar .side-menu .icon ul.menu{
+.sidebar .main_side ul.menu{
   margin: auto;
 }
 
-.sidebar .side-menu .icon ul.menu li{
+.sidebar .main_side ul.menu li{
   padding: 10px 0;
   text-align: center;
   cursor: pointer;
 }
 
-.sidebar .side-menu .icon ul.menu li:hover .material-icons {
+.sidebar .main_side ul.menu li:hover .material-icons {
   color: #f5f5f5;
   border-left-style: 2px solid #ccc;
 }
@@ -35,11 +34,7 @@
   
 }
 
-/* 팝업 메뉴 */
-.sidebar .popup__menu{
+.sidebar .sub_side {
   background-color: #252526;
   width: 225px;
-  height: 917px;
-  position: absolute;
-  left: 50px;
-} 
+}
